--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 /*  your css code here. If applicable */
+div{
+	height: 200px;
+	width: 200px;
+	border: 2px solid black;
+	background-color: lightblue;
+	margin: 20px;
+}
+
+p{
+	color:purple;
+	text-align:center;
+	line-height:12;
+}
